--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
             android:id="@+id/rvContents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:splitMotionEvents="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/headerBlurView"
-            app:memoData="@{viewModel.pagedList}"
+            app:memoList="@{viewModel.memoList}"
             app:viewModel="@{viewModel}" />
 
         <!-- Header 영역 -->
@@ -37,12 +38,12 @@
             app:blurRadius="10dp"
             app:overlayColor="#19FFFFFF" />
 
-<!--        <View-->
-<!--            android:id="@+id/bgHeader"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="@dimen/size_100"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            />-->
+        <!--        <View-->
+        <!--            android:id="@+id/bgHeader"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="@dimen/size_100"-->
+        <!--            app:layout_constraintTop_toTopOf="parent"-->
+        <!--            />-->
 
         <!-- 타이틀 뷰 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/text_size_20"/>
+            android:textSize="@dimen/text_size_20" />
 
         <!-- 프로필 이미지 뷰 -->
         <com.google.android.material.card.MaterialCardView
