--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:memoData="@{viewModel.pagedList}"
+        app:memoList="@{viewModel.memoList}"
         app:viewModel="@{viewModel}" />
 
 </layout>
