2020. 09. 16 - 금일 작업 내역 반영

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,8 @@
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:text="@={viewModel.strPw}" />
+                    android:text="@={viewModel.strPw}"
+                    app:editTextListener="@{viewModel}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
