2020. 09. 20 - 파일 업로드 로직 추가. - Scoped Storage 대응 처리 - 앨범 선택 로직 개선

--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -156,29 +156,16 @@
                     android:layout_marginTop="@dimen/margin_size_10"
                     android:layout_marginRight="@dimen/margin_size_10">
 
-                    <!-- 카메라 추가 버튼 -->
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/imgCamera"
-                        android:layout_width="@dimen/size_40"
-                        android:layout_height="@dimen/size_40"
-                        android:adjustViewBounds="true"
-                        app:dayResId="@{@drawable/ic_add_camera_black}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:nightResId="@{@drawable/ic_add_camera_white}"
-                        app:turtleClick="@{()->viewModel.moveAlbumAndCamera(viewModel.changeData.manageNo)}"
-                        tools:src="@drawable/ic_add_camera_black" />
-
                     <!-- 사진 추가 버튼 -->
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="@dimen/size_40"
                         android:layout_height="@dimen/size_40"
+                        android:padding="@dimen/padding_size_5"
                         android:layout_marginLeft="@dimen/margin_size_5"
                         android:adjustViewBounds="true"
                         app:dayResId="@{@drawable/ic_add_photo_black}"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toRightOf="@+id/imgCamera"
+                        app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:nightResId="@{@drawable/ic_add_photo_white}"
                         app:turtleClick="@{()->viewModel.moveAlbumAndCamera(viewModel.changeData.manageNo)}"
