--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -109,6 +109,8 @@
     <dimen name="margin_size_10">10dp</dimen>
     <dimen name="margin_size_20">20dp</dimen>
 
+    <dimen name="padding_size_2">2dp</dimen>
+    <dimen name="padding_size_5">5dp</dimen>
     <dimen name="padding_size_10">10dp</dimen>
     <dimen name="padding_size_13">13dp</dimen>
 
