--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -23,16 +23,6 @@
             android:layout_height="?android:actionBarSize"
             app:layout_constraintTop_toTopOf="parent">
 
-            <!-- 사진 촬영 -->
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:padding="@dimen/padding_size_10"
-                android:src="@drawable/ic_add_camera_black"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <!-- 선택한 개수 나오는 처리 -->
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -41,8 +31,24 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_size_20"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 tools:text="3 / 4개" />
+
+            <!-- 전송 버튼 -->
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/padding_size_13"
+                android:paddingBottom="@dimen/padding_size_13"
+                android:layout_marginRight="@dimen/margin_size_10"
+                app:turtleClick="@{()->viewModel.moveSubmit()}"
+                android:text="@string/str_summit"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
