2020. 09. 21 - 갤러리 페이지 필터 관련 개발중....어떻게 처리를 해야 할까...

--- a/app/src/main/res/layout/item_gallery_camera.xml
+++ b/app/src/main/res/layout/item_gallery_camera.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.AlbumViewModel" />
+            type="com.hmju.memo.viewModels.GalleryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
