--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -7,14 +7,14 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.AlbumViewModel" />
+            type="com.hmju.memo.viewModels.GalleryViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.hmju.memo.ui.album.AlbumActivity">
+        tools:context="com.hmju.memo.ui.gallery.GalleryActivity">
 
         <!-- Header -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,32 +23,48 @@
             android:layout_height="?android:actionBarSize"
             app:layout_constraintTop_toTopOf="parent">
 
-            <!-- 선택한 개수 나오는 처리 -->
-            <androidx.appcompat.widget.AppCompatTextView
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/margin_size_10"
-                android:gravity="center_vertical"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/text_size_20"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_size_5"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:turtleClick="@{()->viewModel.showFilterSheet()}"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:text="3 / 4개" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@{viewModel.selectedFilter}"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/text_size_20"
+                    tools:text="전체 보기" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="@dimen/size_30"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_arrow_down" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
 
             <!-- 전송 버튼 -->
             <com.google.android.material.button.MaterialButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/margin_size_10"
                 android:paddingTop="@dimen/padding_size_13"
                 android:paddingBottom="@dimen/padding_size_13"
-                android:layout_marginRight="@dimen/margin_size_10"
-                app:turtleClick="@{()->viewModel.moveSubmit()}"
                 android:text="@string/str_summit"
                 android:textColor="@color/colorWhite"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:turtleClick="@{()->viewModel.moveSubmit()}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
