--- a/app/src/main/res/layout/item_gallery_photo.xml
+++ b/app/src/main/res/layout/item_gallery_photo.xml
@@ -21,7 +21,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.AlbumViewModel" />
+            type="com.hmju.memo.viewModels.GalleryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
