--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="@{viewModel.selectedFilter}"
+                    android:text="@{viewModel.selectedFilter.name}"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/text_size_20"
                     tools:text="전체 보기" />
@@ -49,18 +49,6 @@
                     android:src="@drawable/ic_arrow_down" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:turtleClick="@{()->viewModel.testClick()}"
-                android:text="테스트"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/text_size_14"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 전송 버튼 -->
             <com.google.android.material.button.MaterialButton
