--- a/app/src/main/res/layout/item_bottom_sheet_select.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_select.xml
@@ -20,7 +20,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:turtleClick="@{()->listener.onItemSelected(pos,item.name)}">
+        app:turtleClick="@{()->listener.onItemSelected(pos,item.id)}">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:turtleClick="@{()->listener.onItemSelected(pos,item.name)}" />
+            app:turtleClick="@{()->listener.onItemSelected(pos,item.id)}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
