--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.hmju.memo.viewModels.GalleryViewModel" />
@@ -16,64 +18,92 @@
         android:layout_height="match_parent"
         tools:context="com.hmju.memo.ui.gallery.GalleryActivity">
 
-        <!-- Header -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clHeader"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/llHeader"
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_size_5"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:turtleClick="@{()->viewModel.showFilterSheet()}">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="?android:actionBarSize">
 
-                <androidx.appcompat.widget.AppCompatTextView
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="@{viewModel.selectedFilter.name}"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/text_size_20"
-                    tools:text="전체 보기" />
+                    android:layout_marginLeft="@dimen/margin_size_5"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:turtleClick="@{()->viewModel.showFilterSheet()}">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/size_30"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@{viewModel.selectedFilter.name}"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/text_size_20"
+                        tools:text="전체 보기" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="@dimen/size_30"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_arrow_down" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <!-- 전송 버튼 -->
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_arrow_down" />
+                    android:layout_marginRight="@dimen/margin_size_10"
+                    android:paddingTop="@dimen/padding_size_13"
+                    android:paddingBottom="@dimen/padding_size_13"
+                    android:text="@string/str_summit"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:turtleClick="@{()->viewModel.moveSubmit()}" />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- 전송 버튼 -->
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/margin_size_10"
-                android:paddingTop="@dimen/padding_size_13"
-                android:paddingBottom="@dimen/padding_size_13"
-                android:text="@string/str_summit"
-                android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:turtleClick="@{()->viewModel.moveSubmit()}" />
+                android:visibility="@{viewModel.selectedPhotoList.size() > 0 ? View.VISIBLE : View.GONE}">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="?android:actionBarSize"
+                    android:splitMotionEvents="false"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:selectedPhotoList="@{viewModel.selectedPhotoList}"
+                    app:viewModel="@{viewModel}" />
 
+                <View
+                    android:layout_width="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:background="@color/colorCoolGrey"
+                    android:layout_height="@dimen/size_1"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <!-- Contents -->
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:splitMotionEvents="false"
-            app:albumCursor="@{viewModel.cursor}"
+            app:galleryCursor="@{viewModel.cursor}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clHeader"
+            app:layout_constraintTop_toBottomOf="@+id/llHeader"
             app:viewModel="@{viewModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
