2020. 09.29. 수정사항 - 금일 작업 내역 반영

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="colorPlaceHolder_3">#42DA9197</color>
     <color name="colorPlaceHolder_4">#4291A1DA</color>
 
+    <color name="colorWhite_50">#80FFFFFF</color>
+
 </resources>
