--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -15,8 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.hmju.memo.ui.gallery.GalleryActivity">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/llHeader"
@@ -88,9 +87,9 @@
 
                 <View
                     android:layout_width="match_parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_height="@dimen/size_1"
                     android:background="@color/colorCoolGrey"
-                    android:layout_height="@dimen/size_1"/>
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -98,6 +97,7 @@
 
         <!-- Contents -->
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvContents"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:splitMotionEvents="false"
@@ -105,6 +105,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llHeader"
             app:viewModel="@{viewModel}" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_size_10"
+            app:backgroundTint="@color/colorWhite_50"
+            app:elevation="0dp"
+            app:pressedTranslationZ="0dp"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:recyclerView="@{rvContents}"
+            app:srcCompat="@drawable/ic_arrow_top" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
