--- a/app/src/main/res/layout/item_gallery_photo.xml
+++ b/app/src/main/res/layout/item_gallery_photo.xml
@@ -42,28 +42,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/bg_selected_album"
-            android:visibility="@{viewModel.isSelected(imgUrl) ? View.VISIBLE : View.GONE}"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/img_thumb"
             app:layout_constraintTop_toTopOf="@+id/img_thumb"
+            app:visibility="@{viewModel.isSelected(imgUrl)}"
             tools:visibility="visible">
-
-            <!--            <androidx.appcompat.widget.AppCompatTextView-->
-            <!--                android:layout_width="@dimen/size_20"-->
-            <!--                android:layout_height="@dimen/size_20"-->
-            <!--                android:layout_marginLeft="@dimen/margin_size_5"-->
-            <!--                android:layout_marginTop="@dimen/margin_size_5"-->
-            <!--                android:autoSizeMaxTextSize="@dimen/text_size_20"-->
-            <!--                android:autoSizeMinTextSize="1dp"-->
-            <!--                android:autoSizeTextType="uniform"-->
-            <!--                android:background="@drawable/bg_selected_album_cnt"-->
-            <!--                android:gravity="center"-->
-            <!--                android:paddingLeft="@dimen/padding_size_2"-->
-            <!--                android:paddingRight="@dimen/padding_size_2"-->
-            <!--                android:textColor="@color/colorWhite"-->
-            <!--                android:textSize="@dimen/text_size_14"-->
-            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--                app:layout_constraintTop_toTopOf="parent"-->
-            <!--                tools:text="400" />-->
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
